<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_admin_events"
        android:icon="@drawable/ic_event"
        android:title="Events" />
    <item
        android:id="@+id/nav_admin_users"
        android:icon="@drawable/ic_people"
        android:title="Users" />
...
