...
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="#475569"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
...
