...
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="12dp" />

        <Button
            android:id="@+id/btn_delete_event_admin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="#EF4444"
            android:text="Delete Event"
            android:textAllCaps="false"
            android:textColor="@color/white"
...
